--- a/scss/emory-libraries/patterns/50-organisms/header/_structure.scss
+++ b/scss/emory-libraries/patterns/50-organisms/header/_structure.scss
@@ -55,6 +55,16 @@
       grid-row: utility;
       grid-column: full;
       @include padding-x(0 !important);
+
+      // Add border to navigation utility on larger screens.
+      @include breakpoint-l {
+        &::after {
+          content: '';
+          @include absolute(null 0 0 0);
+          width: 100%;
+        }
+      };
+
     }
     &-main {
       grid-row: main;
@@ -87,30 +97,14 @@
 
     }
 
-    // Add borders to main parts.
-    &-utility,
-    &-main,
-    &-search {
-
-      // Only add borders on larger screens.
-      @include breakpoint-l {
-        &::after {
-          content: '';
-          @include absolute(null 0 0 0);
-          width: 100%;
-        }
-      };
-
-    }
-
     // Add border to main on smaller screens.
-    @include breakpoint-s-m {
-      &::after {
-        content: '';
-        @include absolute(null 0 0 0);
-        width: 100%;
-      }
-    };
+    &::after {
+      content: '';
+      display: block;
+      width: 100%;
+      @include absolute(null 0 0 0);
+      @include absolute-center-within-container-x;
+    }
 
   }
 
